--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,33 +1,100 @@
-h1 {
-    font-family: 'Georgia', Times, Times New Roman, serif;
-}
-
-
-
-header{
-    background-color:#4aaaa5;
-    color: whitesmoke;
-    width: 200px; 
-
-}
-
-body{
-
-    padding: 0;
+* {
     margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+
+  /* General style Section*/
+body{
     font-family: 'Arial', Helvetica Neue, Helvetica, sans-serif;
     font-size: 18px;
-    line-height: 150%;
     color: #777777;
-    background-image: url('../images/background.png')   
+    background-image: url('../images/background.png');   
 }
 
+h1 {font-family: 'Georgia', Times,Times New Roman, serif}
+
+/* Navigation/Header Style Section */
+nav {
+    position: fixed;
+    width: 100%;
+    background: #ffffff;
+    padding: 0 10rem 0 10rem;
+    border-bottom:2px solid #cccccc;
+}
+
+.my_name{
+    background: #4aaaa5;
+    color: #ffffff;
+    display: inline-block;
+    padding: 2rem;
+}
+
+.sub_nav{
+    float: right;
+    padding: 2rem 0 2rem 0;
+    margin-top: 4px;
+}
+
+.sub_nav > li {
+    display: inline-block;
+    text-align: center;
+    margin-right: 10px;
+}
+
+a:link,a:visited {
+color: #777777;
+text-decoration: none;
+}
+a:hover {
+color: #4aaaa5;
+}
+
+/* Main Conten Style*/
+/* to clear any floating issues carried by the nav */
+.floatclear{clear: both;}
+.body_container { padding-top: 8rem; }
+
+/* this is the box where all the content of the site will reside */
+.page_content{
+    padding: 2rem;
+    margin: 0 10rem 0 10rem;
+    background: #ffffff;
+}
+
+/* title of the page */
+.page_title{
+    padding-bottom: 1rem;
+    color: #4aaaa5;
+    border-bottom: 3px solid #cccccc;
+}
+
+/* This is the section where to display the content relating to the title of the page */
+
+.clearfix{
+    overflow: auto;
+}
+
+.page_items{
+    padding: 1rem 0 1rem 0;
+}
+
+.profile_picture{
+    width: 15rem;
+    float: left;
+    padding-right: 1rem;
+}
+
+/* Footing Style */
 footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 4rem;
     background-color: #666666;
     text-align: center;
+    padding: 1rem 0;
     color:whitesmoke;
-    padding-top: 25px; 
-    padding-bottom: 5px;
     border-top-style: solid;
     border-width: 5px;
     border-top-color: #4aaaa5;
