--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,22 +69,6 @@ color: #4aaaa5;
     border-bottom: 3px solid #cccccc;
 }
 
-/* This is the section where to display the content relating to the title of the page */
-
-.clearfix{
-    overflow: auto;
-}
-
-.page_items{
-    padding: 1rem 0 1rem 0;
-}
-
-.profile_picture{
-    width: 15rem;
-    float: left;
-    padding-right: 1rem;
-}
-
 /* Footing Style */
 footer {
     position: fixed;
@@ -99,4 +83,35 @@ footer {
     border-width: 5px;
     border-top-color: #4aaaa5;
     font-family: 'Arial', Helvetica Neue, Helvetica, sans-serif;
+}
+
+
+/* This is the section where to display the content relating to the title of the page */
+
+/* About me content style */
+.clearfix{
+    overflow: auto;
+}
+
+.page_items{
+    padding: 1rem 0 1rem 0;
+}
+
+.profile_picture{
+    width: 15rem;
+    float: left;
+    padding-right: 1rem;
+}
+
+/* Contact content style */
+
+.legend_form{
+    padding-top: 1rem;
+}
+
+button{
+    background: #4aaaa5;
+    width: 7rem;
+    height: 2.5rem;
+    margin: 1rem 0 0 0;
 }
